--- a/src/styles/Flights.css
+++ b/src/styles/Flights.css
@@ -1,5 +1,5 @@
-.bg-img{
-    /* background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='256' fill='none'%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='M1440 167.207C1224.62 223.655 980.573 255.5 722 255.5c-260.175 0-505.644-32.241-722-89.345V0h1440v167.207Z' clip-rule='evenodd'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='1048.73' y1='0' y2='787.836' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23FF6D38'/%3E%3Cstop offset='1' stop-color='%23DB7A21'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E); */
+/* .bg-img {
+    background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='256' fill='none'%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='M1440 167.207C1224.62 223.655 980.573 255.5 722 255.5c-260.175 0-505.644-32.241-722-89.345V0h1440v167.207Z' clip-rule='evenodd'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='1048.73' y1='0' y2='787.836' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23FF6D38'/%3E%3Cstop offset='1' stop-color='%23DB7A21'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,59 +7,90 @@
     position: absolute;
     top: 0;
     width: 100%;
-}
+} */
 
 
-.container-margin{
+/* .container-margin {
     margin-top: 10px;
 }
-.flight-container{
+
+.flight-container {
     background-color: #f0e7e7;
     box-sizing: border-box;
     height: auto;
     position: relative;
     width: 100%;
 }
-.basic-con{
+
+.basic-con {
     align-items: center;
     display: flex;
     flex-direction: column;
     height: auto;
     margin: 0 0 35px;
     position: relative;
-}
-p{
+} */
+
+/* .basic-icon p {
+    color: #000;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 20px;
+    margin-top: 40px;
+    text-align: center;
+    text-shadow: rgba(0, 0, 0, .25) 0 1px 1px;
+} */
+
+.basic-icon p {
     color: #fff;
     font-size: 22px;
     font-weight: 500;
     line-height: 28px;
-    margin: 2rem 0 1rem;
-    text-align: center;
-    text-shadow: rgba(0,0,0,.25) 0 1px 1px;
+    margin: 5rem 0 1rem;
+    text-shadow: rgba(0, 0, 0, .25) 0 1px 1px;
 }
-.search-container{
+.search-container {
     background-color: #fffcfc;
-    border-radius: 30px;
-    box-shadow: 1px 1px 2px 1px rgba(0,0,7,.2);
+    border-radius: 15px;
+    box-shadow: 1px 1px 2px 1px rgba(0, 0, 7, .2);
     box-sizing: border-box;
     height: 320px;
     text-align: center;
-    width: 80%;
-}
-.radio-btn{
-    display: flex !important;
-    gap: 3rem;
-    justify-content: flex-start;
-    margin: 1.5rem 1rem;
-    
+    width: 1050px;
+
 }
 
-.journeyinfo {
+.radio-btn {
+    display: flex !important;
+    gap: 5rem;
+    justify-content: flex-start;
+    margin: 1.5rem 1rem;
+    padding: 15px;
+}
+.input-data{
+    gap: 1rem;
+    justify-content: space-evenly;
+    align-items: center;
+    display: flex;
+    text-align: center;
+}
+.leftRightArrow{
+    align-items: center;
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    opacity: .7;
+    padding: 5px;
+    position: relative;
+    width: 10px;
+}
+
+/* .journeyinfo {
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: left;
-    gap: 15px;
+    gap: 5px;
 
     >input,
   select {
@@ -73,21 +104,114 @@ p{
   >select {
     margin-left: 1.8em;
   }
+}  */
+
+#dateInput {
+    margin-left: 10px;
+    width: 20%;
+    height: 40px;
+    border-radius: 5px;
+    font-size: 16px;
+    position: relative;
+    display: inline-block;
+    border: 1px solid grey;
 }
 
-.datepicker{
-    margin-left: 30px;
-    height: 60px;
-    border-radius: 12px;
-    font-size: 20px;
-    border: 1px solid grey;
-  }
+.travellers{
+   text-align: start; 
+}
+.t-class{
+    color: #000;
+    display: inline-flex;
+    font-size: 14px;
+    font-weight: 500;
+    left: 10px;
+    line-height: normal;
+    opacity: .6;
+}
 
+.mainnn{
+    align-items: center;
+    background: #fff;
+    border-radius: 8px;
+    border: 1px solid black;
+    color: #000;
+    cursor: not-allowed;
+    display: flex;
+    gap: .5rem;
+    height: 2.3rem;
+    justify-content: center;
+    padding: 0.5rem;
+    text-align: center;
+}
+.searchflight {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: -3% 20% 0% 35%;
+    background-color: #fc6203;
+    width: 25%;
+    height: 20%;
+    padding: 2%;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    font-weight: 600;
+    border-radius: 25px;
+}
 
+.form__field {
+    font-family: inherit;
+    width: 100%;
+    border: 0;
+    border-bottom: 2px solid gray;
+    outline: 0;
+    font-size: 1.3rem;
+    color: white;
+    padding: 7px 0;
+    background: transparent;
+    transition: border-color 0.2s;
+}
 
+.text-input {
+    margin-left: 10px;
+    border: 2px solid rgb(225, 231, 238);
+    border-radius: 8px;
+    height: 15px;
+    background: rgb(255, 255, 255);
+    cursor: pointer;
+    position: relative;
+    padding: 26px 28px 15px;
 
+}
 
+.input {
+    border: 2px solid rgb(225, 231, 238);
+    border-radius: 8px;
+    height: 15px;
+    background: rgb(255, 255, 255);
+    cursor: pointer;
+    position: relative;
+    padding: 16px 18px 15px;
+}
 
+.content-data-lower {
+    display: flex;
+    align-items: center;
+    margin-top: 28px;
+    gap: 7%;
+    margin: 5% 12%;
+    font-size: 1.0rem;
+}
+
+.profession {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
 
 
 
@@ -192,9 +316,10 @@ p{
 
 
 /* SEARCH BUTTON*/
-.flight-search-btn {
+/* .flight-search-btn {
     margin-top: -1.5rem;
 }
+
 .fly {
     align-items: center;
     background-color: #ff6d38;
@@ -207,7 +332,275 @@ p{
     justify-content: center;
     text-transform: uppercase;
 }
+
 .flyt {
+    border-radius: 3rem;
+    box-shadow: 0 0.2rem 1.2rem 0 rgba(0, 0, 0, .13);
+    font-size: 1.3rem;
+    height: 2.9rem;
+    width: 15rem;
+}
+.flightimage {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+/*------after search btn image------------*/
+.add-first-some {
+    align-items: center;
+    display: flex;
+    height: 5rem;
+    justify-content: center;
+    padding-bottom: 2rem;
+    width: 100%;
+}
+
+
+.add_some_img {
+    width: 970px;
+    height: 90px;
+    position: relative;
+    cursor: pointer;
+}
+
+/* .add_some_img {
+    border-radius: 12px;
+    height: 100%;
+    width: 100%;
+} */
+
+
+
+
+/*----------------FOOTER*--------------*/
+.footer-cyz {
+    background-color: #f8f1f1;
+}
+
+.footer-container-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    margin: 0.5rem 7.5rem;
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.footer-first {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.4rem;
+}
+
+h5 {
+    display: block;
+    font-size: 0.60rem;
+    margin-block-start: 1.67em;
+    margin-block-end: 1.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.footer-para {
+    color: #847f7f;
+    font-size: 0.8rem;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+.footer-underline {
+    background-color: #847f7f;
+    height: 0.1rem;
+}
+
+.footer-content {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 0.8rem;
+    row-gap: 0.4rem;
+}
+
+.footer-bottom-Container {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.2rem;
+}
+
+.footer-heading-h5 {
+    color: #625f5f;
+}
+
+.footer-para {
+    color: #847f7f;
+    font-size: 0.8rem;
+    line-height: 20px;
+}
+
+
+
+
+/*--------------MAIN PAGE-----------*/
+.bg-img{
+    /* background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='256' fill='none'%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='M1440 167.207C1224.62 223.655 980.573 255.5 722 255.5c-260.175 0-505.644-32.241-722-89.345V0h1440v167.207Z' clip-rule='evenodd'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='1048.73' y1='0' y2='787.836' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23FF6D38'/%3E%3Cstop offset='1' stop-color='%23DB7A21'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E); */
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 300px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+
+/* .container-margin{
+    margin-top: 10px;
+} */
+/* .hotel-container{
+    background-color: #f0e7e7;
+    box-sizing: border-box;
+    height: auto;
+    position: relative;
+} */
+.basic-icon{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin: 0 0 35px;
+    position: relative;
+}
+/* .basic-icon p{
+    color: #fff;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 28px;
+    margin: 5rem 0 1rem;
+    text-shadow: rgba(0, 0, 0, .25) 0 1px 1px;
+} */
+/* .search-hotel{
+    background-color: #fffcfc;
+    border-radius: 30px;
+    box-shadow: 1px 1px 2px 1px rgba(0,0,7,.2);
+    box-sizing: border-box;
+    height: 300px;
+    text-align: center;
+    width: 50%;
+} */
+/* .radio-btn{
+    display: flex !important;
+    gap: 3rem;
+    justify-content: flex-start;
+    margin: 1.5rem 1rem;
+    
+} */
+/* input[type="radio" i] {
+    background-color: initial;
+    cursor: pointer;
+    appearance: auto;
+    box-sizing: border-box;
+    margin: 3px 3px 0px 5px;
+    padding: initial;
+    border: initial;
+} */
+div>label {
+    font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    margin: 10px;
+}
+
+/* .inputBox {
+    gap: 1rem;
+    justify-content: space-evenly;
+} */
+/* .search-pic-flight {
+    align-items: center;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+} */
+/* .inp-data-for {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+.flight-so-de {
+    color: #fff;
+    font-weight: 500;
+    opacity: .6;
+    text-align: start;
+}
+input {
+    background-color: #f2efef;
+} */
+/* .custom-textfield {
+    border: none;
+    border-radius: 0.5rem;
+    color: #fff;
+    font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+    font-size: 1rem;
+    font-weight: 600;
+    height: 2rem;
+    padding: 0.3rem 0.5rem;
+    width: auto;
+} */
+/* p{
+    color: #000;
+}
+.date-ppp {
+    margin-bottom: 3px;
+}
+.inp-data-for-para {
+    font-size: 12px;
+    font-weight: 600;
+    margin: 0 10px;
+    text-align: start;
+}
+.flight-so-de {
+    color: #fff;
+    font-weight: 500;
+    opacity: .6;
+    text-align: start;
+} */
+
+/*SEARCH BUTTON*/
+/* .flight-search-btn {
+    margin-top: -1.5rem;
+} */
+/* .kwEZmw {
+    align-items: center;
+    background-color: hsl(24, 65%, 52%);
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    display: flex;
+    font-family: Quicksand;
+    font-weight: 700;
+    justify-content: center;
+    text-transform: uppercase;
+} */
+/* .dMpVqc {
     border-radius: 3rem;
     box-shadow: 0 0.2rem 1.2rem 0 rgba(0,0,0,.13);
     font-size: 1.3rem;
@@ -221,69 +614,82 @@ p{
     justify-content: center;
     padding-bottom: 2rem;
     width: 100%;
-}
-.add_some_img {
-    border-radius: 1rem;
-    height: 100%;
-    width: 70%;
-}
-.footer-cyz {
-    background-color: #f8f1f1;
-}
-.footer-container-main {
+} */
+
+
+/*-----------------------------------*/
+
+
+/* .hotels-container {
+    background-color: #f0e7e7;
     display: flex;
-    flex-direction: column;
     justify-content: space-evenly;
-    margin: 0.5rem 7.5rem;
+    position: relative;
+    z-index: 2;
 }
-.footer-container {
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
+.hotel-details {
+    background-color: #f0e7e7;
+    height: auto;
+    width: 100%;
 }
-.footer-first {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.4rem;
+.background-1{
+    background-color: #2274e0;
+    border-radius: 100%;
+    height: 77rem;
+    left: -44rem;
+    top: 47rem;
+    width: 72rem;
+    z-index: 2;
 }
-h5 {
-    display: block;
-    font-size: 0.60rem;
-    margin-block-start: 1.67em;
-    margin-block-end: 1.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
+.background-2 {
+    background-color: #d1e5ff;
+    border-radius: 50%;
+    height: 80rem;
+    left: -46rem;
+    top: -49rem;
+    width: 74rem;
 }
-.footer-para {
-    color: #847f7f;
-    font-size: 0.8rem;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.hotel-content {
+    position: relative;
+    color: #fff;
+    font-family: Quicksand;
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 5rem 4rem 1.5rem;
+    z-index: 2;
 }
-.footer-underline {
-    background-color: #847f7f;
-    height: 0.1rem;
+.hotels-card {
+    width: 70%;
+    z-index: 4;
 }
-.footer-content {
+.hotel-box{
+        background-color: #fffcfc;
+        border-radius: 10px;
+        height: auto;
+        margin: 0 4rem;
+        padding: 20px 50px;
+        width: 70%;
+}
+.searchblock{
+    margin:2rem;
+}
+.where{
+    color: #777;
+    font-size: 1.2rem;
+}
+.place-search{
+    align-items: center;
     cursor: pointer;
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin: 0.8rem;
-    row-gap: 0.4rem;
+    padding: .5rem 0 1.5rem;
+    width: 50%;
 }
-.footer-bottom-Container {
+.input-search{
+    margin-left: .7rem;
+}
+.picker{
     display: flex;
     flex-direction: column;
-    row-gap: 0.2rem;
-}
-.footer-heading-h5 {
-    color: #625f5f;
-}   
-.footer-para{
-    color: #847f7f;
-    font-size: 0.8rem;
-    line-height: 20px;
-}
+    overflow: auto;
+    padding-top: 8px;
+} */
