--- a/src/Hotels/Hotels.css
+++ b/src/Hotels/Hotels.css
@@ -157,8 +157,8 @@ background-color: #d1e5ff;
 }
 */
 
-.bg-img{
-    /* background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='256' fill='none'%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='M1440 167.207C1224.62 223.655 980.573 255.5 722 255.5c-260.175 0-505.644-32.241-722-89.345V0h1440v167.207Z' clip-rule='evenodd'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='1048.73' y1='0' y2='787.836' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23FF6D38'/%3E%3Cstop offset='1' stop-color='%23DB7A21'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E); */
+/* .bg-img{
+    background-image: url(data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='1440' height='256' fill='none'%3E%3Cpath fill='url(%23a)' fill-rule='evenodd' d='M1440 167.207C1224.62 223.655 980.573 255.5 722 255.5c-260.175 0-505.644-32.241-722-89.345V0h1440v167.207Z' clip-rule='evenodd'/%3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='1048.73' y1='0' y2='787.836' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%23FF6D38'/%3E%3Cstop offset='1' stop-color='%23DB7A21'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E);
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
@@ -166,9 +166,9 @@ background-color: #d1e5ff;
     position: absolute;
     top: 0;
     width: 100%;
-}
+} */
 
-
+/* 
 .container-margin{
     margin-top: 10px;
 }
@@ -177,26 +177,24 @@ background-color: #d1e5ff;
     box-sizing: border-box;
     height: auto;
     position: relative;
-}
-.basic-icon{
+} */
+/* .basic-icon{
     align-items: center;
     display: flex;
     flex-direction: column;
     height: auto;
     margin: 0 0 35px;
     position: relative;
-}
-p{
-    color: rgb(255, 255, 255);
-    
+} */
+/* .basic-icon p{
+    color: #fff;
     font-size: 22px;
     font-weight: 500;
     line-height: 28px;
-    margin: 2rem 0 1rem;
-    text-align: center;
-    text-shadow: rgba(0,0,0,.25) 0 1px 1px;
-}
-.search-hotel{
+    margin: 5rem 0 1rem;
+    text-shadow: rgba(0, 0, 0, .25) 0 1px 1px;
+} */
+/* .search-hotel{
     background-color: #fffcfc;
     border-radius: 30px;
     box-shadow: 1px 1px 2px 1px rgba(0,0,7,.2);
@@ -204,15 +202,15 @@ p{
     height: 300px;
     text-align: center;
     width: 50%;
-}
-.radio-btn{
+} */
+/* .radio-btn{
     display: flex !important;
     gap: 3rem;
     justify-content: flex-start;
     margin: 1.5rem 1rem;
     
-}
-input[type="radio" i] {
+} */
+/* input[type="radio" i] {
     background-color: initial;
     cursor: pointer;
     appearance: auto;
@@ -220,8 +218,8 @@ input[type="radio" i] {
     margin: 3px 3px 0px 5px;
     padding: initial;
     border: initial;
-}
-div>label {
+} */
+/* div>label {
     font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
     font-size: 20px;
     font-weight: 500;
@@ -248,12 +246,11 @@ div>label {
     font-weight: 500;
     opacity: .6;
     text-align: start;
-}
-input {
+} */
+/* input {
     background-color: #f2efef;
 }
 .custom-textfield {
-    /* background-color: #1958b6; */
     border: none;
     border-radius: 0.5rem;
     color: #fff;
@@ -263,8 +260,8 @@ input {
     height: 2rem;
     padding: 0.3rem 0.5rem;
     width: auto;
-}
-p{
+} */
+/* p{
     color: #000;
 }
 .date-ppp {
@@ -281,10 +278,10 @@ p{
     font-weight: 500;
     opacity: .6;
     text-align: start;
-}
+} */
 
-/* SEARCH BUTTON*/
-.flight-search-btn {
+/*SEARCH BUTTON*/
+/* .flight-search-btn {
     margin-top: -1.5rem;
 }
 .kwEZmw {
@@ -298,8 +295,8 @@ p{
     font-weight: 700;
     justify-content: center;
     text-transform: uppercase;
-}
-.dMpVqc {
+} */
+/* .dMpVqc {
     border-radius: 3rem;
     box-shadow: 0 0.2rem 1.2rem 0 rgba(0,0,0,.13);
     font-size: 1.3rem;
@@ -312,5 +309,175 @@ p{
     height: 5rem;
     justify-content: center;
     padding-bottom: 2rem;
+    width: 100%;
+} */
+
+
+/*-----------------------------------*/
+
+
+/* .hotels-container {
+    background-color: #f0e7e7;
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    z-index: 2;
+}
+.hotel-details {
+    background-color: #f0e7e7;
+    height: auto;
+    width: 100%;
+}
+.background-1{
+    background-color: #2274e0;
+    border-radius: 100%;
+    height: 77rem;
+    left: -44rem;
+    top: 47rem;
+    width: 72rem;
+    z-index: 2;
+}
+.background-2 {
+    background-color: #d1e5ff;
+    border-radius: 50%;
+    height: 80rem;
+    left: -46rem;
+    top: -49rem;
+    width: 74rem;
+}
+.hotel-content {
+    position: relative;
+    color: #fff;
+    font-family: Quicksand;
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 5rem 4rem 1.5rem;
+    z-index: 2;
+}
+.hotels-card {
+    width: 70%;
+    z-index: 4;
+}
+.hotel-box{
+        background-color: #fffcfc;
+        border-radius: 10px;
+        height: auto;
+        margin: 0 4rem;
+        padding: 20px 50px;
+        width: 70%;
+}
+.searchblock{
+    margin:2rem;
+}
+.where{
+    color: #777;
+    font-size: 1.2rem;
+}
+.place-search{
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    padding: .5rem 0 1.5rem;
+    width: 50%;
+}
+.input-search{
+    margin-left: .7rem;
+}
+.picker{
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    padding-top: 8px;
+} */
+
+
+.hotels-container {
+    top: 90px;
+    background-color: #f0e7e7;
+    display: flex;
+    justify-content: space-evenly;
+    position: static;
+    z-index: 2;
+}
+
+.hotel-details {
+    background-color: #f0e7e7;
+    height: auto;
+    width: 100%;
+}
+
+.book-hotel-content {
+    position: static;
+    color: #fff;
+    font-family: Quicksand;
+    font-size: 1.5rem;
+    font-weight: 700;
+    padding: 5rem 4rem 1.5rem;
+    z-index: 2;
+}
+
+.hotels-card {
+    width: 70%;
+    z-index: 4;
+}
+
+.hotel-shadow-box {
+    background-color: #fffcfc;
+    border-radius: 10px;
+    height: auto;
+    margin: 0 4rem;
+    padding: 20px 50px;
+    width: 70%;
+}
+
+.radio-btn {
+    display: flex;
+    gap: 3rem;
+    justify-content: flex-start;
+}
+
+label {
+    color: #777;
+    font-family: Gill Sans, Gill Sans MT, Calibri, Trebuchet MS, sans-serif;
+    font-size: 20px;
+    font-weight: 700;
+    margin: 10px;
+}
+
+.city-search {
+    margin: 1rem;
+    color: #777;
+    font-size: 1.2rem;
+}
+.searchInput{
+    align-items: center;
+    cursor: pointer;
+    display: flex;
+    padding: .5rem 0 1.5rem;
+    width: 100%;
+}
+.guest-room{
+    display: flex;
+    flex: 1 1;
+    justify-content: space-between;
+    margin: 1.5rem 0 0;
+    color: #777;
+    font-size: 1.3rem;
+}
+.guest-detail{
+    align-items: center;
+    border-bottom: .1rem solid #eff3f8;
+    cursor: pointer;
+    display: flex;
+    padding: 1rem 0 1.5rem;
+    position: relative;
+    width: 50%;
+}
+.guest{
+    border: none;
+    font-family: Quicksand;
+    font-size: 1.2rem;
+    font-weight: 700;
+    height: 2.5rem;
     width: 100%;
 }
