--- a/src/search/SearchFlightData.css
+++ b/src/search/SearchFlightData.css
@@ -1,7 +1,21 @@
 *{
-    margin: 0;
+    margin-top: 0;
     padding: 0;
 }
-p{
-    padding: 90px;
+.card{
+    background-color: rgb(225, 231, 238);
+    height: 200px;
+    width: 100%;
+    border-radius: 12px;
+}
+.flightimage{
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+#flyimage{
+  flex-wrap: wrap;
 }
