--- a/src/Hotels/Hotels.css
+++ b/src/Hotels/Hotels.css
@@ -454,7 +454,7 @@ label {
     cursor: pointer;
     display: flex;
     padding: .5rem 0 1.5rem;
-    width: 100%;
+    width: 50%;
 }
 .guest-room{
     display: flex;
@@ -481,3 +481,22 @@ label {
     height: 2.5rem;
     width: 100%;
 }
+
+.search-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 1% 22% 0% 30%;
+    background-color: #fc6203;
+    width: 15%;
+    height: 10%;
+    padding: 2%;
+    color: white;
+    border: none;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    font-weight: 600;
+    border-radius: 25px;
+}
+
