--- a/src/search/SearchFlightData.css
+++ b/src/search/SearchFlightData.css
@@ -1,14 +1,17 @@
-*{
-    margin-top: 0;
-    padding: 0;
+* {
+  margin-top: 0;
+  padding: 0;
 }
-.card{
-    background-color: rgb(225, 231, 238);
-    height: 200px;
-    width: 100%;
-    border-radius: 12px;
+
+.card {
+  margin-top: 60px;
+  background-color: rgb(225, 231, 238);
+  height: 200px;
+  width: 100%;
+  border-radius: 12px;
 }
-.flightimage{
+
+.flightimage {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -16,6 +19,29 @@
   align-items: center;
 }
 
-#flyimage{
+#flyimage {
   flex-wrap: wrap;
+}
+
+.flight-list {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  margin-bottom: 10px;
+  
+}
+.flight-data{
+  align-items: center;
+  background: #fff;
+  border-radius: 2rem;
+  box-shadow: -2px 5px 5px 5px #b3aeae;
+  color: #000;
+  display: flex;
+  height: 15rem;
+  width: 100%;
+  justify-content: space-around; 
+}
+ .map-data{
+  color: #847f7f;
+  font-size: 16px;
 }
