--- a/src/search/SearchFlightData.css
+++ b/src/search/SearchFlightData.css
@@ -1,17 +1,18 @@
 * {
   margin-top: 0;
   padding: 0;
+  
 }
 
-.card {
+/* .card {
   margin-top: 60px;
   background-color: rgb(225, 231, 238);
   height: 200px;
   width: 100%;
   border-radius: 12px;
-}
+} */
 
-.flightimage {
+/* .flightimage {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
@@ -29,15 +30,16 @@
   gap: 3rem;
   margin-bottom: 10px;
   
-}
-.flight-data{
+} */
+/* .flight-data{
   align-items: center;
   background: #fff;
-  border-radius: 2rem;
-  box-shadow: -2px 5px 5px 5px #b3aeae;
+  border-radius: 1.5rem;
+  box-shadow: rgba(0, 0, 0, 0.13) 0px 2px 4px 0px;
+  background-color: rgb(255, 255, 255);
   color: #000;
   display: flex;
-  height: 15rem;
+  height: 10rem;
   width: 100%;
   justify-content: space-around; 
 }
@@ -45,3 +47,19 @@
   color: #847f7f;
   font-size: 16px;
 }
+.view-btn{
+  background-color: #ff6d38;
+  border: none;
+  color: #fff;
+  font-weight: 600;
+  padding: .8rem 1rem;
+}
+
+.search-data{
+  margin-top: 50px;
+  height: 160px;
+  position: static;
+  width: 100%;
+  border-radius: 10px;
+  background-color: rgb(34, 116, 224);
+} */
