--- a/src/Flight/Flight.css
+++ b/src/Flight/Flight.css
@@ -79,9 +79,9 @@
   .delhi-div{
     display: flex;
     gap: 10%;
-   margin-left: 20px;
-   color: gray;
-   font-size: 14px;
+    margin-left: 20px;
+    color: gray;
+    font-size: 14px;
   }
   .time-div{
     display: flex;
@@ -91,6 +91,7 @@
   }
   .btn{
     background-color: red;
+    border-radius: 5px;
     padding: 5px;
     color: white;
   }
