--- a/src/components/offer-fory-you-carousel/OfferForYou.css
+++ b/src/components/offer-fory-you-carousel/OfferForYou.css
@@ -6,7 +6,7 @@
 
 .your-carousel-wrapper-class .slick-prev {
     left: -10%;
-  } */
+  } 
   
   .your-carousel-wrapper-class .slick-next {
     right: -10%; /*Adjust the position if needed*/ 
